Support nameless QFileDialog filters

BUG: 470893